# KP_SDLC

./: .env.example  .gitignore  .mcp.json  .quality-gate.baseline.json  CLAUDE.md  Makefile  README.md  protected-surface.txt  pyproject.toml
.claude/: settings.json
.claude/ctx/: checkpoints.jsonl  latest-gist.md  session-ca35891c-gist.md  session-ca35891c.ctx
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: quality.yml  structural-floor.yml
cathedral-keeper/: README.md  cathedral-keeper.config.json  ck.py
cathedral-keeper/cathedral_keeper/: blast_precommit.py  blast_radius.py  cache.py  cli.py  coherence.py  config.py  git_utils.py  heat_map.py  mitigations.py  models.py  path_glob.py  python_graph.py  python_imports.py  python_roots.py  red_team.py  reporting.py  retry.py  runner.py  severity_gradient.py  test_recommender.py  trend.py
cathedral-keeper/tests/: test_agentic_harness_policy.py  test_blast_precommit.py  test_blast_radius.py  test_cache.py  test_coherence.py  test_heat_map.py  test_mitigations.py  test_phase1_qg_integration.py  test_phase1_retry.py  test_qg_ingestion_baseline.py  test_red_team.py  test_runner_policy_wiring.py  test_schema_drift.py  test_severity_gradient.py  test_test_coverage.py  test_test_recommender.py  test_trend_scoring.py
contract-gate/contract_gate/: __init__.py  artifact.py  check.py  cli.py  model.py
contract-gate/tests/: test_contract_gate.py
docs/decisions/: 0001-repo-structure-and-packaging.md  0002-sdlc-init-executor.md  0003-qg-debt-baseline.md  0004-self-healing-flywheel.md  0005-ecc-assessment-and-adoptions.md
docs/eval/: ctx-dogfood-eval-protocol.md
eval-engine/eval_engine/: __init__.py  cli.py  corpus.py  ctx_baseline.py  judge.py  result.py  taxonomy.py
eval-engine/tests/: test_ctx_baseline.py  test_eval_engine.py
fix-engine/: fix-engine.config.json  fix_engine.py  sarif_formatter.py
fix-engine/fe/: __init__.py  applier.py  config.py  fixes_additional.py  fixes_ai_llm.py  fixes_foundation.py  fixes_python.py  fixes_security.py  llm_fixes.py  registry.py  suggest.py  types.py
fix-engine/tests/: test_applier.py  test_applier_fidelity.py  test_applier_safety.py  test_cli_fixable_pipeline.py  test_cli_sarif.py  test_config.py  test_fix_golden.py  test_fixes_additional.py  test_registry.py  test_sarif_enhanced.py  test_suggest.py
fix-engine/workflows/: auto-fix.yml  sarif-upload.yml
harness/: README.md  bootstrap.sh
harness/ci/: engine-gates.yml.tmpl  eval.yml.tmpl  quality.yml.tmpl  second-pass-reviewer.yml.tmpl  structural-floor.yml.tmpl  web.yml.tmpl
harness/commands/: before-i-commit.md  entropy-check.md  principles.md  review.md
harness/decisions/: 0001-design-philosophy.md.tmpl  _template.md.tmpl
harness/hooks/: pre-commit-config.yaml.tmpl  prepush_quality_gate.py  red-flag-attestation.sh  reuse_injector.py  second_pass_reviewer.py
harness/process/: check_pr_template.py
harness/scripts/: check.sh.tmpl  setup.sh.tmpl
harness/selfci/: gen_quality_workflow.py
harness/structural-floor/: README.md  gen_codeowners.py  protected-surface.txt.tmpl  test_protected_surface_sync.py.tmpl
harness/templates/: AGENTS.md.tmpl  CLAUDE.md.tmpl  PULL_REQUEST_TEMPLATE.md.tmpl  cathedral-keeper.json.tmpl  claude-settings.json.tmpl  gitattributes.tmpl  gitignore.tmpl  quality-gate.json.tmpl
input-gate/input_gate/: __init__.py  cli.py  contract.py  evaluators.py  judge.py  model.py
input-gate/tests/: test_input_gate.py
nfr-gate/nfr_gate/: __init__.py  budgets.py  cli.py  model.py
nfr-gate/tests/: test_nfr_gate.py
observatory/: ADAPTIVE_SPEC.md  PLUGIN.md  README.md  __init__.py  __main__.py  adaptive.py  claude_hook.py  context.py  cost.py  events.py  findings.py  gates.py  health.py  install_hooks.py  maturity.py  memory.py  plugin.py  server.py  sources.py  telemetry.py
observatory/static/: index.html
observatory/tests/: test_adaptive_observatory.py  test_cost.py  test_observatory.py
quality-gate/: .pre-commit-config.extended.yaml  .pre-commit-config.yaml  .quality-gate.json  README.md  check_commit_msg.py  install.ps1  install.sh  quality-gate.config.json  quality_gate.py
quality-gate/examples/: README.md
quality-gate/qg/: __init__.py  autofix.py  baseline.py  checks_agent_loops.py  checks_agentic_harness.py  checks_ai_code_quality.py  checks_ai_llm.py  checks_ai_smells.py  checks_comments.py  checks_complexity.py  checks_data_contracts.py  checks_databases.py  checks_debug.py  checks_docparse.py  checks_duplicates.py  checks_fastapi.py  checks_imports.py  checks_langchain.py  checks_llm_output_safety.py  checks_mongodb.py  checks_neo4j.py  checks_nextjs.py  checks_observability.py  checks_performance.py  checks_prompt_quality.py  checks_python.py  checks_safety.py  checks_security.py  checks_size.py  checks_sqlalchemy.py  checks_tests_smells.py  checks_text.py  checks_ux_errors.py  context.py  path_glob.py  prs_engine.py  rules_phase1.py  rules_phase2.py  rules_tests.py  sarif_output.py  (+2 more)
quality-gate/tests/: test_agent_loop_safety.py  test_agentic_harness.py  test_ai_code_detection.py  test_autofix.py  test_autofix_cli.py  test_baseline_ratchet.py  test_contextual_size.py  test_data_contracts.py  test_duplicate_exemptions.py  test_llm_output_safety.py  test_metric_sanity.py  test_no_vacuous_green.py  test_prompt_quality.py  test_prs_veto.py  (+10 more)
reporting/: __init__.py  env_loader.py  fix_integration.py  generate_html_reports.py  generate_index.py
sdlc-init/: README.md
(+83 files in other folders)
