[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kp-sdlc"
version = "0.5.0"
description = "Quality Gate + Cathedral Keeper: portable, zero-dependency code quality and architecture governance for agentic AI projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
qg = "quality_gate:main"
ck = "cathedral_keeper.cli:main"

[tool.setuptools.packages.find]
where = ["quality-gate", "cathedral-keeper", "reporting"]
