[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kp-sdlc"
version = "0.5.0"
description = "Quality Gate + Cathedral Keeper: portable, zero-dependency code quality and architecture governance for agentic AI projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
qg = "quality_gate:main"
ck = "cathedral_keeper.cli:main"

# Explicit mapping: component homes keep their product-facing hyphenated names
# (quality-gate/, cathedral-keeper/) while the importable packages inside them
# install correctly. packages.find could never capture quality_gate.py as a
# top-level module, so the qg entry point was unresolvable even with a valid
# backend. fix-engine/ and reporting/ are direct-run components today; they
# join the distribution when their code moves fully inside importable
# packages (see docs/decisions/0001-repo-structure-and-packaging.md).
[tool.setuptools]
py-modules = ["quality_gate"]
packages = [
    "qg",
    "cathedral_keeper",
    "cathedral_keeper.policies",
    "cathedral_keeper.integrations",
]

[tool.setuptools.package-dir]
"" = "quality-gate"
cathedral_keeper = "cathedral-keeper/cathedral_keeper"
