[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kp-sdlc"
version = "0.5.0"
description = "Quality Gate + Cathedral Keeper: portable, zero-dependency code quality and architecture governance for agentic AI projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# DEV-only test surface; runtime stays zero-dependency.
#   PyYAML — the miniyaml strict-subset loader's differential oracle: it is
#     tested against yaml.safe_load over every shipped document
#     (schemas/tests/test_schemas_e17.py test h). Absent, that test SKIPs;
#     installing [dev] in CI makes the differential actually run.
#   pytest — the component suites (schemas/runtime-verify/eval-engine/input-gate/
#     contract-gate/observatory/fix-engine) are pytest files; `make test` runs
#     each via `python -m pytest <dir>` (fail-closed on zero collection). CI
#     installs [dev] before the blocking suite so those suites are not silently
#     un-run.
dev = ["PyYAML>=6", "pytest>=8"]

[project.scripts]
qg = "quality_gate:main"
ck = "cathedral_keeper.cli:main"
sdlc = "sdlc_init.cli:main"
sdlc-schemas = "sdlc_schemas.cli:main"
rv = "runtime_verify.cli:main"
ee = "eval_engine.cli:main"
g1 = "input_gate.cli:main"
g2 = "contract_gate.cli:main"
g6 = "nfr_gate.cli:main"
kp-observatory = "observatory.__main__:main"

# Explicit mapping: component homes keep their product-facing hyphenated names
# (quality-gate/, cathedral-keeper/) while the importable packages inside them
# install correctly. packages.find could never capture quality_gate.py as a
# top-level module, so the qg entry point was unresolvable even with a valid
# backend. fix-engine/ and reporting/ are direct-run components today; they
# join the distribution when their code moves fully inside importable
# packages (see docs/decisions/0001-repo-structure-and-packaging.md).
[tool.setuptools]
py-modules = ["quality_gate"]
packages = [
    "qg",
    "cathedral_keeper",
    "cathedral_keeper.policies",
    "cathedral_keeper.integrations",
    "sdlc_init",
    "sdlc_schemas",
    "runtime_verify",
    "runtime_verify.packs",
    "eval_engine",
    "eval_engine.kinds",
    "input_gate",
    "contract_gate",
    "nfr_gate",
    "nfr_gate.packs",
    "observatory",
]

[tool.setuptools.package-dir]
"" = "quality-gate"
cathedral_keeper = "cathedral-keeper/cathedral_keeper"
sdlc_init = "sdlc-init/sdlc_init"
sdlc_schemas = "schemas/sdlc_schemas"
runtime_verify = "runtime-verify/runtime_verify"
eval_engine = "eval-engine/eval_engine"
input_gate = "input-gate/input_gate"
contract_gate = "contract-gate/contract_gate"
nfr_gate = "nfr-gate/nfr_gate"
# Observatory already lives in an importable, hyphen-free package directory, so
# it maps to itself (unlike the component homes above whose product-facing names
# contain a hyphen). Its tests/ dir is intentionally excluded from packages.
observatory = "observatory"

# The six SHAPE documents, the failing starters, and any fixtures ship as
# sdlc_schemas package data so a born-gated repo reads shapes from the
# installed engine (importlib.resources) and instances from its own overlay.
[tool.setuptools.package-data]
sdlc_schemas = [
    "shapes/*.yaml",
    "shapes/*.json",
    "starters/*.yaml",
    "starters/rubrics/*.yaml",
    "fixtures/*",
]
# The dashboard HTML ships with the package so `kp-observatory serve` works from
# an installed wheel, not just an in-tree checkout.
observatory = ["static/*.html"]
